--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
         "@rollup/plugin-typescript": "^11.1.3",
         "@sveltejs/vite-plugin-svelte": "^2.4.5",
         "@tsconfig/svelte": "^5.0.2",
+        "@types/ziggy-js": "^1.3.3",
         "autoprefixer": "^10.4.15",
         "axios": "^1.1.2",
+        "laravel-echo": "^1.15.3",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.29",
+        "pusher-js": "^8.3.0",
         "svelte-preprocess": "^5.0.4",
         "tailwindcss": "^3.3.3",
         "tslib": "^2.6.2",
@@ -21,6 +24,8 @@
     },
     "dependencies": {
         "@inertiajs/svelte": "^1.0.11",
-        "svelte": "^4.2.0"
+        "svelte": "^4.2.0",
+        "svelte-hero-icons": "^5.0.0",
+        "ziggy-js": "^1.6.2"
     }
 }
