--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "@rollup/plugin-typescript": "^11.1.3",
         "@sveltejs/vite-plugin-svelte": "^2.4.5",
         "@tsconfig/svelte": "^5.0.2",
+        "@types/react": "^18.2.21",
+        "@types/react-dom": "^18.2.7",
         "@types/ziggy-js": "^1.3.3",
+        "@vitejs/plugin-react": "^4.0.4",
         "autoprefixer": "^10.4.15",
         "axios": "^1.1.2",
         "laravel-echo": "^1.15.3",
@@ -23,7 +26,11 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@heroicons/react": "^2.0.18",
+        "@inertiajs/react": "^1.0.11",
         "@inertiajs/svelte": "^1.0.11",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "svelte": "^4.2.0",
         "svelte-hero-icons": "^5.0.0",
         "ziggy-js": "^1.6.2"
